# nz-electricity-generation-batch-pipeline

./: .env.example  .gitignore  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-airflow.txt
.github/workflows/: ci.yml  dbt-docs.yml
airflow/dags/: nz_electricity_monthly.py  nz_electricity_v2.py  nz_offers_s3_backfill.py  nz_volume_s3_backfill.py  nz_volume_snowflake_backfill.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/seeds/: fuel_codes.csv  hydro_catchment_mapping.csv  nz_public_holidays.csv
dbt/tests/: test_fct_market_volume_raw_reconciliation.sql  test_fct_mart_monthly_reconciliation.sql  test_fct_offer_stack_staging_reconciliation.sql  test_fct_price_raw_reconciliation.sql  test_int_generation_by_poc_reconciliation.sql  test_poc_match_rate.sql  test_renewable_total_reconciliation.sql  (+2 more)
docs/: runbook.md
evidence/: s3_airflow_smoke_2026-05-28.md
scripts/: create_ci_fixture.py  download_generation.py  download_hydro.py  download_nsp.py  download_offers.py  download_price.py  download_volume.py  ingest_dbt_artifacts.py  load_local.py  load_snowflake_offers.py  load_snowflake_price.py  load_snowflake_volume.py  mini_poc_fixture.py  terraform-env.sh  validate_offers.py  validate_price.py  validate_volume.py
streamlit/: app.py  charts.py  loader.py  requirements.txt  ui.py
terraform/: backend.tf  budget.tf  outputs.tf  providers.tf  s3.tf  snowflake.tf  terraform.tfvars.example  terraform_admin_key.pub  variables.tf
tests/: test_dag_integrity.py
(+56 files in other folders)
