[project]
name = "nz-electricity-generation-batch-pipeline"
version = "0.1.0"
description = "NZ Electricity batch pipeline — dbt + Airflow + dual-target (DuckDB local / Snowflake cloud)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.8.0,<1.9.0",
    "dbt-snowflake>=1.8.0,<1.9.0",
    "dbt-duckdb>=1.8.0,<1.9.0",
    "duckdb>=1.0.0",
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "snowflake-connector-python>=3.7",
    "cryptography>=42.0",
    "streamlit>=1.36",
    "plotly>=5.20",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["airflow"]

[tool.pytest.ini_options]
pythonpath = ["."]
